--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
 <nav>
-    <h3>G3 Architects</h3>
+    <h3 class="nav-title">G3 Architects</h3>
     <ul>
        <li><a href="">Home</a></li>
        <li><a href="">About</a></li>
@@ -20,6 +20,16 @@
        <li><a href="">Login</a></li>
     </ul>
 </nav>
+<div class="banner">
+<h1 class="title">Brand New 
+    Group of Architects 
+    </h1>
+    <p class="detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+<button class="btn-primary">Explore More</button>
+</div>
+
+    <img class="banner-img" src="./images/banner.png" alt="" srcset="">
+
     </header>
 
     <main>
