--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </ul>
 </nav>
 <div class="banner">
-<h1 class="title">Brand New 
+<h1 class="title">Brand New <br>
     Group of Architects 
     </h1>
     <p class="detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
@@ -33,7 +33,19 @@
     </header>
 
     <main>
-
+<section class="team">
+    <div class="team-img">
+<img src="./images/team1.png" alt="" srcset="">
+<img src="./images/team2.png" alt="" srcset="">
+<img src="./images/team3.png" alt="" srcset="">
+<img src="./images/team4.png" alt="" srcset="">
+    </div>
+    <div class="team-text">
+<h3 class="text-title">Quick list of Our Features</h3>
+<p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+<button class="btn-primary">Explore More</button>
+    </div>
+</section>
     </main>
 
     <footer>
